# admc-physics-bench

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  agents.md
.github/workflows/: bench.yml  ci_quick.yml
bench/: bench_cli.hpp  bench_csv_schema.hpp  bench_main.cc  bench_output.hpp  bench_parallel.hpp  bench_runner.hpp  bench_scenes.hpp  bench_utils.hpp
docs/: adcm_overview.md  cli_reference.md  sn_math.md  soa_improvement_potentials.md  soa_solver_design.md  soa_solver_implementation_plan.md
results/: ci_quick.csv  soa_native_after.csv  soa_native_eval.md
scripts/: ci_check.sh  ci_plot_scaling.sh  ci_summary.py  quick_results.sh  run_bench.sh  update_plots.py
src/: bench_csv_schema.hpp  contact_gen.cc  contact_gen.hpp  joints.cc  joints.hpp  math.hpp  metrics.cc  metrics.hpp  metrics_micro.cc  metrics_micro.hpp  platform.hpp  scenes.cc  scenes.hpp  soa_pack.hpp  solver_baseline_vec.cc  solver_baseline_vec.hpp  solver_body_soa.cc  solver_scalar_cached.cc  solver_scalar_cached.hpp  solver_scalar_soa.cc  solver_scalar_soa.cpp  solver_scalar_soa.hpp  solver_scalar_soa_fourth.cc  solver_scalar_soa_fourth.hpp  solver_scalar_soa_mt.cc  solver_scalar_soa_mt.hpp  solver_scalar_soa_native.cc  solver_scalar_soa_native.hpp  solver_scalar_soa_simd.cc  solver_scalar_soa_simd.hpp  solver_scalar_soa_spheres.cpp  solver_scalar_soa_spheres.hpp  solver_scalar_soa_vectorized.cc  solver_scalar_soa_vectorized.hpp  solver_vec_lane.cpp  solver_vec_lane.hpp  types.hpp
src/concurrency/: parallel_for.hpp  task_pool.hpp
src/config/: runtime_env.hpp
src/mt/: thread_pool.hpp
src/soa/: tiler.cpp  tiler.hpp  world.hpp
src/solver/: islands.cc  islands.hpp  solver_scalar_soa_native_par.cc  solver_scalar_soa_native_par.hpp  solver_scalar_soa_parallel.cc  solver_scalar_soa_parallel.hpp  thread_scratch.hpp
tests/: parity_soa_vs_baseline.cc  test_csv_header_only.cc  test_energy_and_penetration.cc  test_equivalence_scalar_vs_baseline.cc  test_friction_cone_and_energy.cc  test_invariants.cc  test_joints.cc  test_quick_parity.cc  test_sanity.cc  test_simd_parity.cc  test_solvers.cc  test_thread_determinism.cc
tools/: plot_perf.py
workflows/: ci.yml
